--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "next": "10.1.3",
+    "next-images": "^1.7.0",
+    "next-pwa": "^5.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
