--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.11.3",
+		"@material-ui/icons": "^4.11.2",
+		"dotenv": "^8.2.0",
 		"next": "10.1.3",
 		"next-images": "^1.7.0",
 		"next-pwa": "^5.2.9",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-redux": "^7.2.3",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.3",
